# schur-opt

./: .CMakeLists.txt.swp  .CMakeLists.txt.un~  .driver.cpp.swp  .driver.cpp.un~  .driver.cu.un~  .driver_gpu.cu.swo  .driver_gpu.cu.swp  .driver_gpu.cu.un~  .filelist.csv.swp  .gitignore  .schur_opt.cpp.swp  .schur_opt.cpp.un~  .schur_opt.h.swp  .schur_opt.h.un~  .schur_opt_gpu.cu.swp  .schur_opt_gpu.cu.un~  .schur_opt_gpu.h.swp  .schur_opt_gpu.h.un~  CMakeLists.txt  Hpp.mat  driver.cpp  driver_gpu.cu  filelist.csv  filelist_sample.csv  git-setup-rogerhh.sh  job-schur_opt_gpu  make_me.sh  run_me.sh  sample_files.py  schur_opt.cpp  schur_opt.h  schur_opt_gpu.cu  schur_opt_gpu.h  schur_opt_gpu_debug.cpp  schur_opt_simon.cpp  schur_opt_simon.h
data/: Hll.oct  Hpl.oct  Hpl_fullInertialBA.oct  Hpp_fullInertialBA.oct  Hschur.oct  Hschur_fullInertialBA.oct
profiling/: compare.sh  data_parser.py  run_omp_scaling.sh
test_data/: Hll_fullInertialBA.oct  Hpp.oct  filelist.csv
